{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 132,
  "lineage": "793bb0ed-8dff-4107-804e-2103253398ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0c24b80ec480d1adc",
            "id": "rtb-0c24b80ec480d1adc",
            "owner_id": "294348152799",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e415b8fc939d710",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aet route table",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0094265e4908444f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0093cac2bf998a669",
            "arn": "arn:aws:ec2:eu-central-1:294348152799:instance/i-0a71b8195e062527c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a71b8195e062527c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "epam_learning",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0920d6aa10ff925e3",
            "private_dns": "ip-10-0-3-164.eu-central-1.compute.internal",
            "private_ip": "10.0.3.164",
            "public_ip": "3.64.255.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08da5ec460d206fab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d9e2d72643da1409",
            "tags": {
              "Name": "server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02fb5d57b95c6b402"
            ]
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:294348152799:internet-gateway/igw-09e415b8fc939d710",
            "id": "igw-09e415b8fc939d710",
            "owner_id": "294348152799",
            "tags": {
              "Terraform": "true"
            },
            "vpc_id": "vpc-0094265e4908444f9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:294348152799:security-group/sg-02fb5d57b95c6b402",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02fb5d57b95c6b402",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "AET Security Group",
            "name_prefix": "",
            "owner_id": "294348152799",
            "revoke_rules_on_delete": false,
            "tags": {
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0094265e4908444f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:294348152799:subnet/subnet-0d9e2d72643da1409",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d9e2d72643da1409",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294348152799",
            "tags": {
              "Name": "aet subnet1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0094265e4908444f9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:294348152799:vpc/vpc-0094265e4908444f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d2030c500c3ebfca",
            "default_route_table_id": "rtb-0c24b80ec480d1adc",
            "default_security_group_id": "sg-0cae983b0e3085548",
            "dhcp_options_id": "dopt-5945c133",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0094265e4908444f9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c24b80ec480d1adc",
            "owner_id": "294348152799",
            "tags": {
              "Name": "aet vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}